--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -2,24 +2,24 @@
 /* String color */
 .green_text {
   color: #098D09;
-  font-size: 12px;
 }
 
 .error_text {
   color: #ce0606;
-  font-size: 12px;
   background-color: rgba(61, 27, 27, 0.556);
 }
 
 .warn_text {
   color: #b1af00;
   background-color: rgba(242, 255, 59, 0.065);
-  font-size: 12px;
 }
 
 .time_text {
   color: #757575;
-  font-size: 12px;
+}
+
+.row {
+  font-size: 15px;
 }
 
 * {
@@ -99,6 +99,14 @@
   }
 }
 @media only screen and (max-width: 425px) {
+  .container {
+    background-color: #401386;
+    height: 100vh;
+    width: 100vw;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 5fr 5fr 0.5fr;
+  }
   .container .terminal {
     width: 100%;
     height: 100%;
@@ -107,20 +115,29 @@
     margin-bottom: 10px;
   }
 
-  .green_text {
-    font-size: 16px;
+  .row {
+    font-size: 12px;
+  }
+}
+@media screen and (min-width: 0px) and (max-width: 1000px) and (orientation: landscape) {
+  .container {
+    background-color: #401386;
+    height: 100vh;
+    width: 100vw;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 5fr 5fr 0.5fr;
+  }
+  .container .terminal {
+    width: 100%;
+    height: 100%;
+  }
+  .container .terminal #display p {
+    margin-bottom: 10px;
   }
 
-  .error_text {
-    font-size: 16px;
-  }
-
-  .warn_text {
-    font-size: 16px;
-  }
-
-  .time_text {
-    font-size: 16px;
+  .row {
+    font-size: 12px;
   }
 }
 
