--- a/src/Assets/scss/style.scss
+++ b/src/Assets/scss/style.scss
@@ -1,127 +1,8 @@
 @import "./_partials/colors";
 @import "./_partials/variables";
 @import "./_partials/classes";
-
-*{
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-    outline: none;
-    font-family:Consolas;
-}
+@import "./_partials/global";
+@import "./_partials/layout";
 
 
-.container{
-    background-color: $background_body_color;
-    height: 100vh;
-    width: 100vw;
 
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1.5fr 5fr 5fr 0.5fr;
-    grid-template-areas: 
-      "title title title title"
-      "terminal terminal terminal terminal"
-      "terminal terminal terminal terminal"
-      "footer footer footer footer";
-
-    .title{
-        grid-area: title;
-        justify-self: center;
-        align-self: center;
-        padding: 5px 10px 5px 10px;
-        border: 2px solid $title_terminal_color;
-        color: $title_terminal_color;
-        span{
-            color: $text_footer_color;
-        }
-    }
-
-    .terminal{
-        background-color: $background_terminal_color;
-        grid-area: terminal;
-        width: 70%;
-        height: 95%;
-        border-radius: 5px;
-        border: $border_terminal_color 7px solid;
-        justify-self: center;
-        align-self: start;
-
-
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-        grid-template-rows: 1fr 10fr 10fr;
-        grid-template-areas: 
-            "input input input input"
-            "tela tela tela tela"
-            "tela tela tela tela"
-        ;
-        
-          input[type="text"]{
-            padding: 5px;
-            background-color:$background_terminal_color;
-            border: none;
-            grid-area: input;
-            border-bottom: $border_terminal_color 10px solid;
-            color: $text_input_color;
-          }
-          #display{
-            padding: 5px;
-            grid-area: tela;
-            p{
-                margin-bottom: 3px;
-            }
-          }
-    }
-
-    footer{
-        grid-area: footer;
-        justify-self: center;
-        align-self: center;
-        color: $text_footer_color;
-    }
-}
-
-
-@media only screen and (max-width: 1200px){
-    .container{
-        .terminal{
-            width: 70%;
-            height: 95%;
-        }
-    }
-}
-@media only screen and (max-width: 600px){
-    .container{
-        .terminal{
-            width: 90%;
-            height: 100%;
-        }
-    }
-}
-@media only screen and (max-width: 425px){
-    .container{
-        .terminal{
-            width: 100%;
-            height: 100%;
-            #display{ 
-                p{
-                    margin-bottom: 10px;
-                }
-              }
-        }
-    }
-    .green_text{
-        font-size: 16px;
-    }
-    .error_text{
-        font-size: 16px;
-    }
-    .warn_text{
-        font-size: 16px;
-    }
-    
-    .time_text{
-        font-size: 16px;
-    }
-}
