--- a/src/Assets/scss/_partials/_layout.scss
+++ b/src/Assets/scss/_partials/_layout.scss
@@ -1,3 +1,16 @@
+::-webkit-scrollbar{
+    width: 5px;
+    background-color: rgba(0, 255, 255, 0.085);
+}
+::-webkit-scrollbar-thumb{
+    width: 5px;
+    border-radius: 5px;
+    background-color: aqua;
+}
+
+::-webkit-scrollbar-corner{
+    background-color: red;
+}
 .container{
     background-color: $background_body_color;
     height: 100vh;
@@ -25,6 +38,8 @@
     }
 
     .terminal{
+       
+
         background-color: $background_terminal_color;
         grid-area: terminal;
         width: 70%;
@@ -53,10 +68,16 @@
             color: $text_input_color;
           }
           #display{
+            overflow-x: hidden;
+            overflow-y: auto;
+            white-space: nowrap;
             padding: 5px;
             grid-area: tela;
             p{
                 margin-bottom: 3px;
+            }
+            ::-webkit-scrollbar{
+                width: 30px;
             }
           }
     }
