--- a/src/Assets/scss/_partials/_colors.scss
+++ b/src/Assets/scss/_partials/_colors.scss
@@ -3,6 +3,10 @@ $background_body_color: #401386;
 $background_terminal_color: #242227;
 $border_terminal_color: #0D041B;
 
+$bg_text_warning_color:#f2ff3b11;
+$bg_text_error_color:#3d1b1b8e;
+
+
 /* String color */
 $title_terminal_color: #0E7C0E;
 $text_input_color: #757575;
@@ -11,3 +15,4 @@ $text_terminal_color: #098D09;
 $text_error_color: #ce0606;
 $text_warning_color:#b1af00;
 $text_footer_color:#FFFFFF;
+$text_user_color:#668f6d;
