--- a/src/Assets/scss/_partials/_classes.scss
+++ b/src/Assets/scss/_partials/_classes.scss
@@ -7,6 +7,11 @@
     background-color:  $bg_text_error_color;
 }
 
+.info_text{
+    color: $text_info_color;
+    background-color:  $bg_text_info_color;
+}
+
 .warn_text{
     color: $text_warning_color;
     background-color: $bg_text_warning_color;
