--- a/src/Assets/scss/_partials/_colors.scss
+++ b/src/Assets/scss/_partials/_colors.scss
@@ -5,6 +5,7 @@ $border_terminal_color: #0D041B;
 
 $bg_text_warning_color:#f2ff3b11;
 $bg_text_error_color:#3d1b1b8e;
+$bg_text_info_color:#00ccff27;
 
 
 /* String color */
@@ -16,3 +17,4 @@ $text_error_color: #ce0606;
 $text_warning_color:#b1af00;
 $text_footer_color:#FFFFFF;
 $text_user_color:#668f6d;
+$text_info_color: #74b9ff;
