--- a/src/Assets/scss/_partials/_colors.scss
+++ b/src/Assets/scss/_partials/_colors.scss
@@ -6,7 +6,8 @@ $border_terminal_color: #0D041B;
 $bg_text_warning_color:#f2ff3b11;
 $bg_text_error_color:#3d1b1b8e;
 $bg_text_info_color:#00ccff27;
-
+$bg_text_win_color: rgba(0, 128, 0, 0.291);
+$bg_text_lose_color:#2a00008e;
 
 /* String color */
 $title_terminal_color: #0E7C0E;
